# Clean_report_E-report

./: .gitignore  Danh sách báo cáo e-report.xlsx  E-report_remove_rp_by_kw.py  README.md  clean_report.ipynb  init_python_path.sh  map_cate_eReport.py  map_cate_eReport_dict.py  pyproject.toml  run_data_for_updating_filter_report_manually.py  run_data_from_clickhouse.py
app/constant/: constant_global.py  constant_metric.py
app/core/: config.py  config_metricseo.py
app/db/: database.py  db_metricseo.py  es.py  session_es_metric.py
categories_data/: lazada_categories.json  sendo_categories.json  shopee_categories.json  tiki_categories.json  tiktok_categories.json
helper/: QueueRPCMessage.proto  QueueRPCMessage_pb2.py  QueueRPCMessage_pb2.pyi  aes_helper.py  agent_helper.py  alchemy_helper.py  apprise_helper.py  array_helper.py  async_helper.py  base_convert_helper.py  bee_http_requests.py  bee_kv_helper.py  bson_helper.py  count_helper.py  currency_helper.py  da_string_helper.py  data_version_helper.py  dataframe_helper.py  datetime_helper.py  dgraph_helper.py  discord_helper.py  disk_storage_helper.py  download_helper.py  elasticsearch7_helper.py  elasticsearch_async_helper.py  elasticsearch_helper.py  elasticsearch_tranform.py  encode_json_helper.py  error_helper.py  fast_crawl_helper.py  fastapi_helper.py  file_folder_helper.py  gsheet_helper.py  helper_eReport.py  instagram_helper.py  logger_helper.py  multi_thread_new.py  multithread_helper.py  phone_helper.py  postgresql_helper.py  (+20 more)
schedule/report_service/: build_es_query_service.py  (+2 more)
(+42 files in other folders)
