[tool.poetry]
name = "clean-report-e-report"
version = "0.1.0"
description = "clean report Ereport"
authors = ["truongtm3110 <thangtm@metric.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
