[tool.poetry]
name = "clean-report-e-report"
version = "0.1.0"
description = "clean report Ereport"
authors = ["truongtm3110 <thangtm@metric.vn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
fastapi-users = { extras = ["oauth", "sqlalchemy"], version = "^13.0.0" }
pydantic = "^2.8.2"
requests = "^2.32.3"
fastapi = "^0.112.0"
elasticsearch = "^8.14.0"
pydantic-settings = "^2.4.0"
elasticsearch7 = "^7.17.9"
sqlmodel = "^0.0.21"
unidecode = "^1.3.8"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
